; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/screensavers/3dtext/extr_3dtext.c_ReSizeGLScene.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/screensavers/3dtext/extr_3dtext.c_ReSizeGLScene.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_PROJECTION = common dso_local global i32 0, align 4
@GL_MODELVIEW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ReSizeGLScene(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 1, i32* %5, align 4
  br label %9

9:                                                ; preds = %8, %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @glViewport(i32 0, i32 0, i32 %10, i32 %11)
  %13 = load i32, i32* @GL_PROJECTION, align 4
  %14 = call i32 @glMatrixMode(i32 %13)
  %15 = call i32 (...) @glLoadIdentity()
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = sdiv i32 %16, %17
  %19 = call i32 @gluPerspective(float 4.500000e+01, i32 %18, float 0x3FB99999A0000000, float 1.000000e+02)
  %20 = load i32, i32* @GL_MODELVIEW, align 4
  %21 = call i32 @glMatrixMode(i32 %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @glViewport(i32, i32, i32, i32) #1

declare dso_local i32 @glMatrixMode(i32) #1

declare dso_local i32 @glLoadIdentity(...) #1

declare dso_local i32 @gluPerspective(float, i32, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
